--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "test": "vitest"
   },
   "dependencies": {
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
+    "uuid": "^11.1.0",
     "zod": "^3.25.16"
   },
   "devDependencies": {
